<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/cardItem"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	app:cardElevation="10dp"
	android:layout_marginStart="10dp"
	android:layout_marginTop="10dp"
	android:layout_marginEnd="10dp"
	android:layout_marginBottom="10dp">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="10dp">

		<TextView
			android:id="@+id/bookTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="24dp"
			android:text="@string/professional_android"
			android:textColor="@color/redText"
			android:textSize="30sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.504"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/bookImage" />

		<TextView
			android:id="@+id/bookAuthor"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="5dp"
			android:text="@string/reto_meier_ian_lake"
			android:textColor="@color/redTextHint"
			android:textSize="20sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.502"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/bookTitle"
			tools:ignore="TextContrastCheck" />

		<ImageView
			android:id="@+id/bookImage"
			android:layout_width="150dp"
			android:layout_height="150dp"
			android:layout_marginTop="15dp"
			android:contentDescription="@string/book_image"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/waiting"
			tools:ignore="ImageContrastCheck" />

		<TextView
			android:id="@+id/bookPrice"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/price_of_book"
			android:layout_margin="30dp"
			android:textSize="18sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
